--- a/BVCB/BanVeChuyenBay/Properties/Resources.resx
+++ b/BVCB/BanVeChuyenBay/Properties/Resources.resx
@@ -244,4 +244,25 @@
   <data name="nhavien" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nhavien.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="currency" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\currency.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChinaFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChinaFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="EUFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EUFlag.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="JapanFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\JapanFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RussianFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\RussianFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="USFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\USFlag.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VNFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\VNFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
