--- a/BVCB/BanVeChuyenBay/GUI/frmQuanLyChuyenBay.resx
+++ b/BVCB/BanVeChuyenBay/GUI/frmQuanLyChuyenBay.resx
@@ -200,4 +200,7 @@
   <metadata name="SoGheTrong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="HangHangKhong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
