--- a/BVCB/BanVeChuyenBay/Properties/Resources.resx
+++ b/BVCB/BanVeChuyenBay/Properties/Resources.resx
@@ -322,4 +322,7 @@
   <data name="dinh-dang-hhk" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dinh-dang-hhk.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Air_travel_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Air-travel-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
